App/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: nginx.youdomain.com
  labels:
    app: nginx
  name: ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 443
        path: /*
